# Data_acquisition_api

./: CHANGELOG.md  CONTRIBUTING.md  Final_project_KellyChen_Submission.ipynb  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/financial_data_acquisiton_api/: __init__.py  financial_data_acquisiton_api.py
tests/: test_financial_data_acquisiton_api.py
