[tool.poetry]
name = "financial_data_acquisiton_api"
version = "0.1.0"
description = "This is a python package that scrapes financial data(stock prices and financial statements) from yahoo finance and rclean and handle the data. "
authors = ["Kelly Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
